--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <section class="page-header">
       <h1 class="project-name">Apple</h1>
       <h2 class="project-tagline"></h2>
+      <audio src="sora_its_cheese.wav" controls preload></audio>
+     <!--
       <a href="https://github.com/mart3318/apple" class="btn">View on GitHub</a>
       <a href="https://github.com/mart3318/apple/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/mart3318/apple/tarball/master" class="btn">Download .tar.gz</a>
-    </section>
+    -->
+   </section>
 
     <section class="main-content">
       <p></p>
