--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Apple</h1>
+      <h1 class="project-name">Hello, 혜</h1>
       <h2 class="project-tagline"></h2>
       <audio src="sora_its_cheese.wav" controls preload></audio>
      <!--
