--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us"  lang="kr">
   <head>
     <meta charset="UTF-8">
     <title>Apple by mart3318</title>
