--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"  lang="kr">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
     <title>Apple by mart3318</title>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Hello, 혜!</h1>
+      <h1 class="project-name">Hello, Hyesig!</h1>
       
       <h2 class="project-tagline"></h2>
       <audio src="sora_its_cheese.wav" controls preload></audio>
