--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!-- <input type="button" value="Download" onclick.download="sora_its_cheese.wav">          
 -->
         
-<button type="submit" onclick="window.open('sora_its_cheese.wav')">Download</button>
+<button type="submit" onclick="download('sora_its_cheese.wav')">Download</button>
       </form>  
 
            
