--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       <h1 class="project-name">Hello, Hyesig!</h1>
       
       <h2 class="project-tagline"></h2>
+      <p>
+        It's cheese. Give it to the mouse.
+        <p>
+          Hurry! It's melting!
+        <p>
+          What time is it? Goodnight!
+          <p>
+            What time is it? Good morning!
+            <p>
       <audio src="sora_its_cheese.wav" controls preload></audio>
       
       <p>
