--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <h1 class="project-name">Testing</h1>
+    <h1 class="project-name"><img src="images/bird.png"></h1>
     <h2 class="project-tagline">Hello!</h2>
       <p>
         It's cheese. Give it to the mouse.
