--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-
-    <h1 class="project-name"><img src="images/bird.png"></h1>
-    <h2 class="project-tagline">Hello!</h2>
+<img src="images/bird.png">
+    <h1 class="project-name">Hello!</h1>
+    <h2 class="project-tagline"></h2>
       <p>
         It's cheese. Give it to the mouse.
         <p>
