--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <center>
 <img src="images/bird.png">
     <h1 class="project-name">Hello!</h1>
     <h2 class="project-tagline"></h2>
@@ -23,5 +24,6 @@
             What time is it? Good morning!
             <p>
       <audio src="sora_its_cheese.wav" controls preload></audio>
+    </center>
   </body>
 </html>
