--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <center>
-<img src="images/bird.png">
+<img src="images/bird.png" height="150" width="150">
     <h1 class="project-name">Hello!</h1>
     <h2 class="project-tagline"></h2>
       <p>
