--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <h1 class="project-name">Hello!</h1>
     <h2 class="project-tagline"></h2>
       <p>
+      <h3>UNIT 1</h3>
+      
+      <p>
        bad / cold / feel / fine / good / great
   <p>
         her / his / my / so / wrong / your
