--- a/index.html
+++ b/index.html
@@ -16,6 +16,39 @@
     <h1 class="project-name">Hello!</h1>
     <h2 class="project-tagline"></h2>
       <p>
+        <h3>UNIT 2</h3>
+      <p>
+animal / baseball / carrot / favorite / food / football / math
+<p>
+music / noodle / P.E. (physical education) / sport / strawberry / subject
+<p>
+<strike>My favorite animal is dogs.</strike> 그것은 이상한 예이다...
+<p>
+I like baseball.
+<p>
+She doesn't like carrot<b>s</b>.
+<p>
+What is your favorite fruit?
+<p>
+My favorite food is pizza.
+<p>
+We don't like football.
+<p>
+I don't like math.
+<p>
+My favorite subject is music.
+<p>
+I don't like noodles.
+<p>
+The like P.E.
+<p>
+What's your favorite sport?
+<p>
+She likes strawberries.
+<p>
+What is your favorite subject?
+  <p>
+    
       <h3>UNIT 1</h3>
       
       <p>
