--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ animal / baseball / carrot / favorite / food / football / math
 <p>
 music / noodle / P.E. (physical education) / sport / strawberry / subject
 <p>
-<strike>My favorite animal is dogs.</strike> 그것은 이상한 예이다...
+My favorite animal is dogs.
 <p>
 I like baseball.
 <p>
