--- a/index.html
+++ b/index.html
@@ -16,6 +16,37 @@
     <h1 class="project-name">Hello!</h1>
     <h2 class="project-tagline"></h2>
       <p>
+      <h3>UNIT 3</h3>
+      <p>
+      art / class / Friday / have / Monday / Saturday
+        <p>
+          science / social studies / Sunday / Thursday / Tuesday / Wednesday
+          <p>
+            I like art class.
+            <p>
+              We don't have P.E. class today.
+              <p>
+                It's Friday
+                <p>
+                  I have math class today.
+                  <p>
+                    Today is Monday.
+                    <p>
+                      Do we have science today?
+                      <p>
+                        Do we have social studies today?
+                        <p>
+                          We don't have class on Sunday.
+                          <p>
+                            Today is Thursday.
+                            <p>
+                              We have English class on Tuesday.
+                              <p>
+                                I don't have English class on Wednesday.
+                                
+      <p>
+        <audio src="4A Unit 3.mp3" controls preload></audio>
+        <p>
         <h3>UNIT 2</h3>
       <p>
 animal / baseball / carrot / favorite / food / football / math
