--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                   <p>
                     Today is Monday.
                     <p>
-                      Do we have science today?
+                      Do we have math class on Saturday?
                       <p>
+                        We don't have science today.
+                        <p>
                         Do we have social studies today?
                         <p>
                           We don't have class on Sunday.
