--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="project-name">Hello!</h1>
     <h2 class="project-tagline"></h2>
       <p>
-        <frame src="testframe">
+        <iframe src="testframe"></iframe>
         <p>
       <h3>UNIT 6</h3>
       <p> beautiful / big / city / day / elevator / exciting / flower
