--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="project-name">Hello!</h1>
     <h2 class="project-tagline"></h2>
       <p>
-        <iframe src="4AUNIT7.html" scrolling="no" style="width:100%; height: 100%; overflow: hidden;"></iframe>
+        <iframe src="4AUNIT7.html"></iframe>
         <p>
       <h3>UNIT 6</h3>
       <p> beautiful / big / city / day / elevator / exciting / flower
